--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,7 @@
 == README
 
 This is an example of the warning shoulda-matchers displays in Rails 4.1
+
+* Clone the app
+* Run 'bundle install' and 'rake db:migrate'
+* Run 'rspec' to view shoulda-matchers warning
